# s2e

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.dist  Dockerfile.tools  KLEEConfig.cmake.in  LIBQConfig.cmake.in  LIBS2ECOREConfig.cmake.in  LIBS2EConfig.cmake.in  LIBS2EPLUGINSConfig.cmake.in  LICENCE  LICENSE  LICENSE.TXT  LLVMBitcode.cmake  Makefile  Makefile.common  Makefile.docker  Makefile.target  Makefile.tools  README  README.md  README.rst  README.txt  common-run.sh.tpl  configure  create_qt_project.py  create_qt_project.sh  helpers.sh  pylint_rc  run-clang-format.sh  test-clang-format.sh
guest/common/: CMakeLists.txt
klee/: CMakeLists.txt
klee/cmake/: find_llvm.cmake  klee_add_component.cmake
klee/unittests/: CMakeLists.txt  TestMain.cpp  coverage.sh
lib/Expr/: BitfieldSimplifier.cpp  CMakeLists.txt  CachedAssignmentEvaluator.cpp  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  Lexer.cpp  Parser.cpp  Updates.cpp
lib/Support/: CMakeLists.txt  RNG.cpp  Time.cpp
lib/X8664BitcodeLibrary/: CMakeLists.txt
lib/X8664Translator/: CMakeLists.txt
libcoroutine/: CMakeLists.txt  COPYING.LIB  LIBCOROUTINEConfig.cmake.in
libcoroutine/src/: coroutine-int.h  coroutine-ucontext.c  coroutine.c
libcpu/: CMakeLists.txt  LIBCPUConfig.cmake.in
libcpu/include/: libcpu-compiler.h  libcpu-log.h  timer.h
libcpu/src/: CMakeLists.txt  bswap.h  cpu-all.h  cpu-defs.h  cpu-exec.c  cpus.c  disas.c  exec-all.h  exec-bp.c  exec-log.c  exec-memdbg.c  exec-phys.c  exec-phys.h  exec-phystb.c  exec-ram.c  exec-ram.h  exec-tb.c  exec-tb.h  exec-tlb.c  exec-tlb.h  exec.c  exec.h  ioport.c  memory.c  precise-pc.c  qemu-lock.h  softmmu_exec.h  softmmu_header.h  softmmu_template.h  timer.c  translate-all.c
libfsigc++/: CMakeLists.txt  FSIGCXXConfig.cmake.in
libfsigc++/src/: CMakeLists.txt  signals.cpp  test.cpp
libq/src/: CMakeLists.txt  cutils.c  cutils.h  error.c  json-parser.c  json-streamer.c  q.h  qbool.c  qdict.c  qfloat.c  qint.c  qlist.c  qstring.c  unicode.c  unicode.h
libs2e/: CMakeLists.txt  LIBS2EConfig.cmake.in  Makefile  Makefile.target  README.md  configure
libs2e/src/: CMakeLists.txt  FileDescriptorManager.h  crashdump.cpp  libs2e.cpp  libs2e.h  mapfile  s2e-kvm-io.cpp  s2e-kvm-state-arm.cpp  s2e-kvm-state.cpp  s2e-kvm-trace.cpp  s2e-kvm-trace.h  s2e-kvm-vcpu.cpp  s2e-kvm-vcpu.h  s2e-kvm-vm.cpp  s2e-kvm-vm.h  s2e-kvm.cpp  s2e-kvm.h  s2e-libcpu-interface.cpp  syscalls.h  task_runner.h  test.cpp
libs2ecore/: CMakeLists.txt  LIBS2ECOREConfig.cmake.in  LICENSE
libs2ecore/src/: AddressSpaceCache.cpp  CMakeLists.txt  ConfigFile.cpp  CorePlugin.cpp  CorePluginInterface.cpp  ExprInterface.cpp  FunctionHandlers.cpp  MMUFunctionHandlers.cpp  MemoryDebugger.cpp  Plugin.cpp  PluginManager.cpp  S2E.cpp  S2EDeviceState.cpp  S2EExecutionState.cpp  S2EExecutionStateMemory.cpp  S2EExecutionStateRegisters.cpp  S2EExecutionStateTlb.cpp  S2EExecutor.cpp  S2EExternalDispatcher.cpp  S2EStatsTracker.cpp  S2ETranslationBlock.cpp  SymbolicHardwareHook.cpp  Synchronization.cpp  Utils.cpp  s2e-qmp.cpp
libs2eplugins/: CMakeLists.txt  LIBS2EPLUGINSConfig.cmake.in  LICENSE
libs2eplugins/src/: CMakeLists.txt
libtcg/: CMakeLists.txt  LIBTCGConfig.cmake.in
libtcg/src/: CMakeLists.txt  atomic-helpers.c  atomic_common.c.inc  atomic_template.h  elf.h  optimize.c  region.c  tcg-gvec-desc.h  tcg-ldst.c.inc  tcg-llvm.cpp  tcg-op-gvec-common.h  tcg-op-gvec.c  tcg-op-gvec.h  tcg-op-ldst.c  tcg-op-vec.c  tcg-op.c  tcg-pool.c.inc  tcg-runtime-gvec.c  tcg-s2e.c  tcg.c
libvmi/: CMakeLists.txt  LICENSE  README.md  VMIConfig.cmake.in
libvmi/src/: CMakeLists.txt  DecreeFile.cpp  ElfDwarf.cpp  ExecutableFile.cpp  FileProvider.cpp  PEFile.cpp  Vmi.cpp  WinKernDumpFile.cpp  WindowsCrashDumpGenerator.cpp  addrs2lines.cpp  crashdump.cpp  dump.cpp  injector.cpp  pdb.cpp  reader.cpp  vmidemo.cpp
linux/: CMakeLists.txt
linux/cgccmd/: cgccmd.c
linux/function_models/: CMakeLists.txt  libc_wrapper.c  libz_wrapper.c  models.c  models_test.c
linux/include/: function_models.h  s2e_so.h
linux/s2e.so/: CMakeLists.txt  elf.c  list.h  main.c  modules.c  modules.h  procmap.c  s2e.c
linux/scripts/: launch.sh
src/: AddressSpaceCache.cpp  Architecture.rst  BuildingLinux.rst  BuildingS2E.rst  CMakeLists.txt  Contribute.rst  CorePlugin.cpp  CorePluginInterface.cpp  DebuggingS2E.rst  DecreeFile.cpp  ElfDwarf.cpp  EquivalenceTesting.rst  ExecutableFile.cpp  ExprInterface.cpp  FAQ.rst  FileDescriptorManager.h  FileProvider.cpp  FunctionHandlers.cpp  ImageInstallation.rst  MMUFunctionHandlers.cpp  ManualTesting.rst  MemoryDebugger.cpp  MovingFiles.rst  PEFile.cpp  Plugin.cpp  PluginManager.cpp  ProfilingS2E.rst  S2E.cpp  S2EDeviceState.cpp  S2EExecutionState.cpp  S2EExecutionStateMemory.cpp  S2EExecutionStateRegisters.cpp  S2EExecutionStateTlb.cpp  S2EExecutor.cpp  S2EExternalDispatcher.cpp  S2EStatsTracker.cpp  S2ETranslationBlock.cpp  StateMerging.rst  SymbolicHardwareHook.cpp  Synchronization.cpp  (+98 more)
src/DesignAndImplementation/: kvm_interface.odg
src/Howtos/: Concolic.rst  Debugging.rst  ExecutionTracers.rst  Parallel.rst  WritingPlugins.rst  s2e.so.rst
src/Plugins/: Annotations.rst  BaseInstructions.rst  EdgeKiller.rst  FunctionMonitor.rst  ModuleExecutionDetector.rst
src/Profiling/: ProfilingS2E.rst
src/Tools/: ExecutionProfiler.rst  ForkProfiler.rst  TbPrinter.rst
src/Tutorials/: CGC.rst  Coreutils.rst  WindowsDLL.rst  pov.rst
src/fpu/: softfloat.c
src/i386/: tcg-target.c  tcg-target.inc.c
src/old/: optimize.c  tcg-llvm.cpp
src/sample/: factorial.c
src/target-i386/: cpu.h  cpuid.c  helper.c  helper.h  helper_template.h  op_helper.c  ops_sse.h  svm.h  translate.c
src/tci/: tcg-target.c
tools/: CMakeLists.txt  LICENSE  LLVMBitcode.cmake
tools/analysis/: CMakeLists.txt
tools/cacheprof/: CMakeLists.txt  cacheprof.cpp
tools/coverage/: CMakeLists.txt  Coverage.cpp  Coverage.h
tools/debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h
tools/hardening/: Hardening.h  (+2 more)
(+1757 files in other folders)
